TheConsultancyFirm/Styles/_ourCustomers.scss
.image {	
	filter: grayscale(100%);
	transition: filter .3s ease-in-out;
	max-width: 100%;
	
	&:hover {
		filter: none;
	}
}

.introtext {
	text-align: center;
	margin-bottom:100px;
	h1{
		font-family: Ubuntu, sans-serif;
		font-weight:500;
		font-size:30px;
		line-height:39px;
	}

	p {
		font-family: Raleway, sans-serif;
		font-size: 21px;
		line-height: 30px;
	}
}

